# ctison

./: .eslintrc.cjs  .gitignore  .gitmodules  .lintstagedrc.mjs  .mise.toml  .prettierignore  .rtx.toml  bun.lockb  docusaurus.config.js  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  turbo.json  vite.config.ts
.devcontainer/: devcontainer.json  docker-compose.yml
.fttemplates/<FTName | pascalcase>/: <FTName | pascalcase>.tsx
.fttemplates/react-component-dir/: .ftsettings.json
.fttemplates/react-component-file/: .ftsettings.json  [FTName % pascalcase].tsx
.github/: renovate.json
.github/workflows/: ci.yaml  renovate.yaml
.husky/: pre-commit
app/: layout.tsx  page.tsx
app/(mantine)/: Footer.tsx  NavBar.tsx  layout.tsx
apps/evm/: .env  .gitignore  foundry.toml  hardhat.config.ts  package.json  remappings.txt  turbo.json
apps/web/: .env  .env.development  contentlayer.config.ts  next.config.mjs  next.config.ts  package.json  tsconfig.json  turbo.json
blog/: 2020-09-06-firefox-containers.md  2020-09-07-crack-with-vscode-hexeditor.md  2020-09-09-vscode-remote-containers.md
components/: Keyboard.tsx  StaggeredTiles.tsx
components/AppShell/: Footer.tsx  NavBar.tsx  index.tsx
contracts/nft/: package.json
docs/: doc1.md
libs/eslint/: package.json
libs/react-echarts/: package.json
pages/: _app.tsx  index.tsx
public/: cute-robot.riv  keyboard.splinecode  orbits.riv
scripts/: hanzi-freq.txt  hanzi.ts
src/: entry-server.tsx  root.tsx
src/pages/: index.js
src/routes/: *404.tsx  index.tsx
(+232 files in other folders)
