[project]
name = "ctison"
version = "0.0.0"
requires-python = "==3.13"

# cSpell:disable
dependencies = ["pandas==2.2.3"]

[dependency-groups]
dev = [
  "anywidget>=0.9.13",
  "bokeh==3.6.3",
  "ipykernel==6.29.5",
  "nbformat>=4.2.0",
  "plotly>=6.0.0",
  "pre-commit==4.1.0",
  "ruff==0.9.10",
]
# cSpell:enable
